[project]
name = "news_ph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt>=0.26.20",
    "dagster-duckdb>=0.26.20",
    "dagster-duckdb-pandas>=0.26.20",
    "dbt-duckdb>=1.9.3",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "news_ph.definitions"
code_location_name = "news_ph"

[tool.setuptools.packages.find]
exclude=["news_ph_tests"]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
